# ChangeLog for app-misc/endeavour
# Copyright 2002-2004 Gentoo Foundation; Distributed under the GPL v2
# $Header: /usr/local/ssd/gentoo-x86/output/app-misc/cvs-repo/gentoo-x86/app-misc/endeavour/Attic/ChangeLog,v 1.17 2004/10/19 09:45:04 absinthe Exp $

  19 Oct 2004; Dylan Carlson <absinthe@gentoo.org> endeavour-2.3.3.ebuild,
  endeavour-2.3.6.ebuild:
  Stable on amd64.

  05 Oct 2004; Pieter Van den Abeele <pvdabeel@gentoo.org>
  endeavour-2.3.0.ebuild, endeavour-2.3.3.ebuild, endeavour-2.3.6.ebuild:
  Masked endeavour-2.3.6.ebuild stable for ppc

  05 Oct 2004; Pieter Van den Abeele <pvdabeel@gentoo.org>
  endeavour-2.3.0.ebuild, endeavour-2.3.3.ebuild:
  Masked endeavour-2.3.3.ebuild stable for ppc

  05 Oct 2004; Pieter Van den Abeele <pvdabeel@gentoo.org>
  endeavour-2.3.0.ebuild:
  Masked endeavour-2.3.0.ebuild stable for ppc

  07 Jun 2004; Daniel Black <dragonheart@gentoo.org> +metadata.xml,
  endeavour-2.1.20-r1.ebuild, endeavour-2.3.3.ebuild, endeavour-2.3.6.ebuild:
  x86 stable. IUSE fix

*endeavour-2.3.6 (12 Jan 2004)

  12 Jan 2004; Hanno Boeck <hanno@gentoo.org> endeavour-2.3.6.ebuild:
  Version bump.

  15 Dec 2003; Jon Portnoy <avenj@gentoo.org> endeavour-2.3.3.ebuild,
  endeavour-2.3.0.ebuild :
  AMD64 keywords.

*endeavour-2.3.3 (01 Oct 2003)

  01 Oct 2003; Hanno Boeck <hanno@gentoo.org> endeavour-2.3.3.ebuild,
  files/endeavour_gcc33_fix:
  Version bump and fix for gcc 3.3.1 added.
  Big endian patch removed, will stay ~ppc for now, ppc people should look
  if the patch is still needed.

*endeavour-2.3.0 (02 Apr 2003)

  02 Apr 2003; Hanno Boeck <hanno@gentoo.org> endeavour-2.3.0.ebuild :
  New version.

*endeavour-2.1.21 (11 Feb 2003)

  11 Feb 2003; Hanno Boeck <hanno@gentoo.org> endeavour-2.1.21.ebuild :
  New version. Removed fix for gcc3 (no longer needed).

*endeavour-2.1.20-r1 (10 Nov 2002)

  11 Nov 2002; Jon Nall <nall@gentoo.org> endeavour-2.1.20-r1.ebuild :
  
  added patch to fix "negative" images in the iBrowser on big endian