@@ -1,0 +1,2 @@
+MD5 6fc3ab7275bcbd395291b8cfc807af72 endeavour-2.4.6.tar.bz2 2215534
+MD5 dbbb7f4aa5e330be063c1b2b24495cf2 endeavour2-mimetypes.tgz 1423
